--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "bootswatch": "^5.1.0",
+    "classnames": "^2.3.1",
+    "currency-formatter": "^1.5.8",
+    "primeicons": "^4.1.0",
+    "primereact": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
+    "toastr": "^2.1.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
